# Saintpaulia

./: README.md  Varieties_table.xlsx  Varieties_table_1Sep.xlsx  Varieties_table_1_Sep.xlsx  architecture.txt  import_photos.py  import_varieties.py  main.py  pyproject.toml  render.yaml  requirements.txt  Копія _БАЗА сортів_ (1).xlsx
alembic/: env.py
alembic/versions/: 042c0c2d37f1_change_field_status_verification_status_.py  0cae1dc59ae5_increase_refresh_token_length.py  0fe6b8053aec_create_uploaded_photos_table.py  2d75e06c8b05_fix_user_role_enum.py  3274c3cf5e61_add_photo_logs_table.py  32fbdef6b62e_add_timezone_to_datetime_fields.py  3f182b7d6cf5_add_verification_fields_to_saintpaulia.py  437069a9e2c6_add_is_verified_field_to_saintpaulia.py  4bf72bac1b0f_add_relationship_of_verifier_to_users.py  4e744c574276_add_uploadedphoto_model.py  5c0561efabd4_refresht0ken_added_to_user_model.py  7338b14b5f69_initial_migration.py  77a531ce695c_saintpaulia_model_record_author_to_.py  87bb0638df77_deleted_foreign_keys_for_variety_id_and_.py  87bff2132701_add_new_fields_to_saintpaulia.py  962cd4ac63be_nullable_values_allowed_for_saintpaulia_.py  acec7dbd1155_user_model_confirmed_column_added.py  b6cf5ea83d0c_source_of_photos_added_to_saintpaulia.py  bdf0552f2db5_edit_saintpaulia_logs_table.py  beaf157b5c73_add_verification_classes_to_saintpaulia.py  c535da37ebbf_change_field_is_verified_status_in_.py  c709d0c22883_upd_model_for_saintpaulia.py  (+7 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
saintpaulia_app/: database.py  main.py  models.py  router.py
(+91 files in other folders)
